@@ -5,21 +5,19 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.StreamSupport;
 
-public abstract class AbstractRepository<ID, E>
-        implements Repository<ID, E> {
+public abstract class AbstractRepository<I, E>
+        implements Repository<I, E> {
 
-    protected Map<ID, E> entities = new HashMap<>();
+    protected Map<I, E> entities = new HashMap<>();
 
     @Override
-    public E findOne(ID id) {
+    public E findOne(I id) {
         return entities.get(id);
     }
 
     @Override
     public List<E> findAll() {
-        return (List<E>)StreamSupport.stream(entities.values().spliterator(), false).toList();
-//                    .collect(Collectors.toList());
-        // return (List<E>) entities.values();
+        return StreamSupport.stream(entities.values().spliterator(), false).toList();
     }
 
     @Override
@@ -29,7 +27,7 @@ public abstract class AbstractRepository<ID, E>
     }
 
     @Override
-    public E delete(ID id) {
+    public E delete(I id) {
         return entities.remove(id);
     }
 
@@ -39,5 +37,5 @@ public abstract class AbstractRepository<ID, E>
         return entity;
     }
 
-    protected abstract ID getId(E entity);
+    protected abstract I getId(E entity);
 }
